k8s/06-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-api-service
  namespace: banking
spec:
  selector:
    app: banking-api
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: banking-dashboard-service
  namespace: banking
spec:
  selector:
    app: banking-dashboard
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: banking
spec:
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
